style: 统一代码风格和 Javadoc 格式
- 规范 Javadoc 注释中 @param 和 @return 之间的空行
- 简化条件表达式（使用 isEmpty() 替代 length() > 0）
- 移除冗余的空行和未使用的导入

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>